deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: any-authenticate-service
  name: any-authenticate-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: any-authenticate-service
  type: ClusterIP
