deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: any-authenticate-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "any-authenticate-service.anyverse.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: any-authenticate-service
                port:
                  number: 8080
